--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.13.1
   firebase_analytics: ^9.1.2
+  firebase_database: ^9.0.8
 
 dev_dependencies:
   flutter_test:
