--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.13.1
-  firebase_analytics: ^9.1.2
-  firebase_database: ^9.0.8
+  firebase_core: 1.2.1
+  firebase_analytics: 8.1.1
+  firebase_database: 7.1.0
 
 dev_dependencies:
   flutter_test:
