--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: 1.2.1
   firebase_analytics: 8.1.1
   firebase_database: 7.1.0
+  firebase_messaging: 10.0.1
 
 dev_dependencies:
   flutter_test:
