--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_analytics: 8.1.1
   firebase_database: 7.1.0
   firebase_messaging: 10.0.1
+  google_mobile_ads: ^1.1.0
 
 dev_dependencies:
   flutter_test:
