--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_database: 7.1.0
   firebase_messaging: 10.0.1
   google_mobile_ads: ^1.1.0
+  flutter_local_notifications: 6.0.0
 
 dev_dependencies:
   flutter_test:
